[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-mapper"
version = "0.1.0"
description = "Generate a map of a codebase highlighting important files and definitions"
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.0",
    "fastmcp>=2.11.3",
    "grep-ast>=0.3.0",
    "networkx>=3.0",
    "pygments>=2.14.0",
    "tiktoken>=0.5.0",
    "tree-sitter>=0.20.0",
]

[project.scripts]
repo-mapper = "repomap:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/repomap", "src/repomap_class", "src/repomap_server", "src/utils", "src/importance", "src/scm"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
